--- a/.github/workflows/.github/workflows/main_helloPythonApp.yml
+++ b/.github/workflows/.github/workflows/main_helloPythonApp.yml
@@ -3,28 +3,37 @@ name: Build and Deploy Chatbot to Azure
 on:
   push:
     branches:
-      - main   # branch that triggers deployment
+      - main   # triggers deployment on main branch
+  workflow_dispatch:   # allows manual triggering from GitHub UI
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout your code
       - uses: actions/checkout@v3
 
+      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # Optional: run tests here if needed
+      # - name: Run tests
+      #   run: pytest
+
+      # Step 4: Deploy to Azure Web App
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: <YOUR_APP_SERVICE_NAME>
+          app-name: helloPythonApp            # <-- Replace with your Azure Web App name
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
