--- a/.github/workflows/.github/workflows/main_helloPythonApp.yml
+++ b/.github/workflows/.github/workflows/main_helloPythonApp.yml
@@ -3,8 +3,8 @@ name: Build and Deploy Chatbot to Azure
 on:
   push:
     branches:
-      - main   # triggers deployment on main branch
-  workflow_dispatch:   # allows manual triggering from GitHub UI
+      - main         # triggers deployment when you push to main
+  workflow_dispatch: # allows manual triggering from GitHub UI
 
 jobs:
   build-and-deploy:
@@ -34,6 +34,6 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: helloPythonApp            # <-- Replace with your Azure Web App name
+          app-name: chat_bot                      # <-- Your Azure Web App name
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
